# ik_solver

./: .gitignore  CMakeLists.txt  CalcIK.srv  JointState.msg  README.md  package.xml
include/ik_solver/: opw_kinematics.h  opw_kinematics_impl.h  opw_parameters.h  opw_utilities.h
src/: ik_solver.cpp  ik_solver_v1.cpp  ik_solver_v2.cpp  robo_params.yaml
